--- a/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -9,7 +9,13 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+
+@foreach(var item in Model)
+{
+    @Html.Partial("_RestaurantSummary", item)
+}
+
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -39,3 +45,8 @@
 }
 
 </table>
+
+@section footer {
+    <div>This is a custom footer.</div>
+        
+}*@
