--- a/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
+++ b/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Alexander's ASP.NET Restaurant Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -29,10 +29,17 @@
         </div>
     </div>
     <div class="container body-content">
+        @if(TempData["Message"] != null)
+        {
+            <div class="alert alert-info">
+                @TempData["Message"]
+            </div>
+        }
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            @RenderSection("footer", required: false)
         </footer>
     </div>
 
